# cmake_examples

adding_headers/: CMakeLists.txt
adding_headers/include/: athlete.h
adding_headers/src/: athlete.cpp  main.cpp
